nova_tests/negative_capability/p50_positional_default_single.nv
// EXPECT_COMPILE_ERROR передаётся только по имени
//
// Plan 50 (D102 ревизия): параметр с дефолтом — keyword-only.
// `f(required, opt)` где `opt` имеет дефолт — позиционная привязка к
// `opt` запрещена. Здесь единственный дефолтный параметр.

module negative_capability.p50_positional_default_single

fn connect(host str, port int = 8080) -> int =>
    host.len + port

test "positional arg on defaulted param rejected" {
    let _ = connect("localhost", 9000)
    assert(true)
}
